--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
     left: 0;
     width: 100%;
     background-color: #f0f0f0;
-    padding: 5px;
+    padding: 10px;
     box-sizing: border-box;
     border-bottom: 1px solid #ccc;
   }
   .item {
     border: 1px solid #fff;
-    margin-bottom: 2px;
+    margin-bottom: 10px;
     padding: 10px;
   }
 </style>
 </head>
 <body>
-<div id="scrollInfo">Lines Scrolled: 0</div>
+<div id="scrollInfo">Lines Scrolled: 0 | Highest Lines Scrolled: 0</div>
 <div id="container"></div>
 
 <script>
@@ -42,6 +42,7 @@ let scrollInfo = document.getElementById('scrollInfo');
 let page = 1;
 let lineNumber = 1;
 let linesScrolled = 0;
+let highestLinesScrolled = localStorage.getItem('highestLinesScrolled') || 0;
 
 function fetchData() {
   // Simulating fetching data by generating line numbers
@@ -73,7 +74,13 @@ window.addEventListener('scroll', () => {
   
   // Update lines scrolled
   linesScrolled = Math.round(window.scrollY / 74.5); // Assuming each line has a height of 20px
-  scrollInfo.textContent = `Lines Scrolled: ${linesScrolled}`;
+  scrollInfo.textContent = `Lines Scrolled: ${linesScrolled} | Highest Lines Scrolled: ${highestLinesScrolled}`;
+  
+  // Update highest lines scrolled
+  if (linesScrolled > highestLinesScrolled) {
+    highestLinesScrolled = linesScrolled;
+    localStorage.setItem('highestLinesScrolled', highestLinesScrolled);
+  }
 });
 </script>
 </body>
