--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ let page = 1;
 let lineNumber = 1;
 let linesScrolled = 0;
 let highestLinesScrolled = localStorage.getItem('highestLinesScrolled') || 0;
+let lineHeight = 22; // Adjust this value according to your line height
 
 function fetchData() {
   // Simulating fetching data by generating line numbers
@@ -73,7 +74,7 @@ window.addEventListener('scroll', () => {
   }
   
   // Update lines scrolled
-  linesScrolled = Math.round(window.scrollY / 74.5); // Assuming each line has a height of 20px
+  linesScrolled = Math.round(window.scrollY / lineHeight);
   scrollInfo.textContent = `Lines Scrolled: ${linesScrolled} | Highest Lines Scrolled: ${highestLinesScrolled}`;
   
   // Update highest lines scrolled
