--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   }
   #scrollInfo {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: 10px; /* Adjust top position as needed */
+    left: 10px; /* Adjust left position as needed */
     background-color: #f0f0f0;
     padding: 5px;
     box-sizing: border-box;
-    border-bottom: 1px solid #ccc;
+    border: 1px solid #ccc;
+    z-index: 9999; /* Ensure it's above other content */
   }
   .item {
     border: 1px solid #fff;
@@ -43,7 +43,6 @@ let page = 1;
 let lineNumber = 1;
 let linesScrolled = 0;
 let highestLinesScrolled = localStorage.getItem('highestLinesScrolled') || 0;
-let lineHeight = 22; // Adjust this value according to your line height
 
 function fetchData() {
   // Simulating fetching data by generating line numbers
@@ -74,7 +73,7 @@ window.addEventListener('scroll', () => {
   }
   
   // Update lines scrolled
-  linesScrolled = Math.round(window.scrollY / lineHeight);
+  linesScrolled = Math.round(window.scrollY / 74.5); // Assuming each line has a height of 74.5px
   scrollInfo.textContent = `Lines Scrolled: ${linesScrolled} | Highest Lines Scrolled: ${highestLinesScrolled}`;
   
   // Update highest lines scrolled
