--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     width: 100%;
     padding: 20px;
     box-sizing: border-box;
+    margin-top: 50px; /* Adjust margin top to make space for the scroll info */
   }
   #scrollInfo {
     position: fixed;
-    top: 10px; /* Adjust top position as needed */
-    left: 10px; /* Adjust left position as needed */
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: #f0f0f0;
     padding: 5px;
     box-sizing: border-box;
